--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Header</h1>
-				<p>Paragraph. <a href="/about">Link to about page</a></p>
+				<p>Paragraph. Stylesheet added. <a href="/about">Link to about page</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
