--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Louie Terrill</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Header</h1>
-				<p>Paragraph. Stylesheet added. <a href="/about">Link to about page</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:LouieTerrill@gmail.com">email</a></li>
-        		<li><a href="https://github.com/LouieTerrill">github.com/LouieTerrill</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Radio Terrill
+---
+<div class="blurb">
+	<h1>Header</h1>
+		<p><a href="/about">Link to about page</a></p>
+</div><!-- /.blurb -->
