--- a/cv/index.html
+++ b/cv/index.html
@@ -4,9 +4,38 @@ title: Curriculum Vitae
 ---
 
 <h1>{{ page.title }}</h1>
+<ul>
+  <li>
+    Academic
+    <ul>
+      <li>
+        University
+      </li>
+    </ul>
+  </li>
 
-<h2>Academic</h2>
-
-<h2>Professional</h2>
-
-<h2>Personal</h2>
+  <li>
+    Professional
+    <ul>
+      <li>
+        Internships
+      </li>
+    </ul>
+  </li>
+  
+  <li>
+    Personal
+    <ul>
+      <li>
+        <a href="http://bahfest.com/">BAHfests</a>
+        <ul>
+          <li>
+          Making sure we're all in this together: Why the Kessler syndrome is key to humanity's future
+          </li>
+          <li>
+          <a href="https://youtu.be/9suftOAHGdU">Halting terrestrial rotation: The benefits</a>
+          </li>
+      </li>
+    </ul>
+  </li>
+</ul>
