--- a/about/index.html
+++ b/about/index.html
@@ -5,5 +5,9 @@ title: About
 
 <h1>About me</h1>
 
+<h1>About my blog</h1>
+I decided to make a blog because it seemed like a good way to share summaries of interesting conversations I'd had with friends, with the added advantage that I could go back and present my thoughts much more legibly. 
+
+The blog is also haunted by a spooky ghost occasionally. It's probably nothing to worry about.
 <h1>About this site</h1>
 The design of this site was based on <a href="http://jmcglone.com/guides/github-pages/">Jonathan McGlone's guide</a>.
