--- a/cv/index.html
+++ b/cv/index.html
@@ -11,6 +11,25 @@ title: Curriculum Vitae
     <ul>
       <li>
         University
+        <ul>
+          <li>
+            Physics MSci at Imperial College London: current overall grade 76%, expect to graduate 2019
+          </li>
+        </ul>
+      </li>
+      <li>
+        Pre-university
+        <ul>
+          <li>
+            A-levels: 5 A* (Physics, Chemistry, Mathematics, Further Mathematics, General Studies), 1 A (French)
+          <\li>
+          <li>
+            AS levels: 1 A (Critical thinking)
+          </li>
+          <li>
+            GCSEs: 11 A* (including Mathematics linked pair and English Language), 1 A (Japanese, self-taught)
+          </li>
+        </ul>
       </li>
     </ul>
   </li>
@@ -20,6 +39,20 @@ title: Curriculum Vitae
     <ul>
       <li>
         Internships
+        <ul>
+          <li>
+            Summer 2017, 8 weeks: On this placement I produced proofs of concept for a variety of emerging technologies that were seen as valuable opportunities by my host organisation.
+            These were developed in an Agile setting, and my rapid demonstrations of robotic process automation, semantic embedding, and social media analytics using machine learning were particularly well-received
+          </li>
+          <li>
+            Summer 2016, 2 weeks at the Centre For Effective Altruism: I contacted a variety of other organisations with significant youth engagement to help develop a set of best practices for setting up student groups, researched which conferences would provide the best opportunities to promote the movement, and wrote up a short literature review on the relevance of Mohism to Effective Altruism
+          </li>
+          <li>
+            Summer 2016, 8 weeks: I created and developed systems of ontologies in order to describe and analyse a real system automatically. 
+            I also used a Python script to monitor the connection status of a GPS receiver over a serial port, and wrote a Matlab script to analyse a data set without having access to it myself.
+            My work ethic and documentation were consistently praised over the placement.
+          </li>
+        </ul>
       </li>
     </ul>
   </li>
@@ -36,8 +69,12 @@ title: Curriculum Vitae
           <li>
           <a href="https://youtu.be/9suftOAHGdU">Halting terrestrial rotation: The benefits</a>
           </li>
+        </ul>
       </li>
     </ul>
   </li>
 </ul>
+</p>
+<p>
+  Please contact me for further details or to request a pdf copy of the full version.
 </p>
