--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,8 @@ title: About
 </ul>
   My Facebook page will also reveal my friends there and a photo of my face.
   Anyone with a LinkedIn account (trivial to set up a fake one) will also be able to find that I'm a member of the 80,000 Hours group there.
+  Further doxing, such as my Reddit account, is left as an exercise as a reader. 
+  Let me know if you've found something I've missed, and I'll list your preferred pseudonym on this site.
 </p>
 
 <h1>About my blog</h1>
