--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,8 @@ title: About
     </li>
 </ul>
   My Facebook page will also reveal my friends there and a photo of my face.
-  Anyone with a LinkedIn account (trivial to set up a fake one) will also be able to find that I'm a member of the 80,000 Hours group there.
-  Further doxing, such as my Reddit account, is left as an exercise as a reader. 
+  Anyone with a LinkedIn account will also be able to find that I'm a member of the 80,000 Hours group there.
+  Further doxing, such as my Reddit account, is left as an exercise to the reader. 
   Let me know if you've found something I've missed, and I'll list your preferred pseudonym on this site.
 </p>
 
