--- a/donations/index.html
+++ b/donations/index.html
@@ -6,7 +6,12 @@ title: Donations
 <h1>My donations</h1>
 <p>
   I'm interested in Effective Altruism and am planning to take the <a href="https://www.givingwhatwecan.org/pledge/">Giving What We Can pledge</a> when I graduate.
-  Consequently, I'm currently donating 10% of my income to the most effective charities.
+  Consequently, I'm currently aiming 10% of my income to the most effective charities.
   (Were you expecting to find me soliciting donations for myself instead?)
-  Here's a summary of where my earnings have gone so far:
+  Here's a (non-infllation-adjusted) summary of where my earnings have gone so far:
 </p>
+<p>
+  |Year   |Earnings (£)   |Donations (£)   |
+  |---|---|---|
+  |2016   |2,000   |Against Malaria Foundation: 50, GiveDirectly: 50   |
+  |2017   |2,000   |TBC   |
