--- a/donations/index.html
+++ b/donations/index.html
@@ -7,8 +7,7 @@ title: Donations
 <p>
   I'm interested in Effective Altruism and am planning to take the <a href="https://www.givingwhatwecan.org/pledge/">Giving What We Can pledge</a> when I graduate.
   Consequently, I'm currently aiming to donate 10% of my income to the most effective charities.
-  (Were you expecting to find me soliciting donations for myself instead?)
-  Here's a (non-infllation-adjusted) summary of where my earnings have gone so far:
+  Here's a (non-inflation-adjusted) summary of where my earnings have gone so far:
 </p>
 <p>
   <table>
@@ -28,4 +27,5 @@ title: Donations
     <td>TBC</td>
   </tr>
 </table>
+
 </p>
