--- a/donations/index.html
+++ b/donations/index.html
@@ -12,9 +12,9 @@ title: Donations
 <p>
   <table>
   <tr>
-    <th>Year</th>
-    <th>Earnings (£)</th>
-    <th>Donations (£)</th>
+    <tr>Year</th>
+    <tr>Earnings (£)</th>
+    <tr>Donations (£)</th>
   </tr>
   <tr>
     <td>2016</td>
